# failure_ext

./: .travis.yml  Cargo.toml  README.md
src/: future_ext.rs  lib.rs  option_ext.rs
