[package]
name = "failure_ext"
version = "0.1.0"
authors = ["Marcin Mielniczuk <marmistrz.dev@zoho.eu>"]
edition = "2018"
license = "AGPL-3.0"
repository = "https://github.com/marmistrz/failure_ext"
description = "Convenience extension traits for the failure error-handling crate"
keywords = ["failure"]

[dependencies]
failure = "0.1.5"
