[package]
name = "failure_ext"
version = "0.1.2"
authors = ["Marcin Mielniczuk <marmistrz.dev@zoho.eu>"]
edition = "2018"
license = "AGPL-3.0"
repository = "https://github.com/marmistrz/failure_ext"
description = "Convenience extension traits for the failure error-handling crate"
keywords = ["failure"]

[package.metadata.docs.rs]
all-features = true

[features]
default = []
future_ext = ["futures"]

[dependencies]
failure = "0.1.5"
futures = { version = "0.1.28", optional = true}
